[package]
name = "violin"
version = "0.0.1"
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "decentralized network coordinate system using the vivaldi algorithm"
repository = "https://github.com/kbknapp/violin"
documentation = "https://docs.rs/violin/"
keywords = [
	"vivaldi",
	"network",
	"coordinate",
	"latency",
	"distance"
]
categories = [
	"algorithms", 
	"network-programming",
	"no-std"
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bench]]
name = "benches"
harness = false

[dependencies]
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"

[features]
default = []
nightly = [] # Enable nighlty or experiemental features
doc     = [] # Used when compiling docs
std     = ["rand/std"] # Enable stdlib support
alloc   = ["rand/alloc"] # Enable heap allocations
