[package]
name = "violin"
version = "0.0.2"
edition = "2018"
description = "decentralized network coordinate system using the vivaldi algorithm"
documentation = "https://docs.rs/violin/"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kbknapp/violin"
categories = [
	"algorithms",
	"network-programming",
	"no-std"
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
keywords = [
	"vivaldi",
	"network",
	"coordinate",
	"latency",
	"distance"
]

[[bench]]
name = "basic"
path = "benches/basic.rs"
harness = false

[dependencies]
rand = { version = "0.8.4", default-features = false }

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"

[features]
default = ["std"]
nightly = [] # Enable nighlty or experiemental features
doc     = [] # Used when compiling docs
builder = [] # Enable the "Builder Pattern" for Node
std     = ["rand/std"] # Enable stdlib support
alloc   = ["rand/alloc"] # Enable heap allocations
