[package]
name = "violin"
version = "0.3.0"
edition = "2021"
description = "decentralized network coordinate system using the vivaldi algorithm"
documentation = "https://docs.rs/violin/"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kbknapp/violin"
rust-version = "1.59.0"  # MSRV
categories = [
	"algorithms",
	"network-programming",
	"no-std"
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
keywords = [
	"vivaldi",
	"network",
	"coordinate",
	"latency",
	"distance"
]

[[bench]]
name = "heap"
path = "benches/heap.rs"
harness = false
required-features = ["alloc"]

[[bench]]
name = "heapless"
path = "benches/heapless.rs"
harness = false

[dependencies]
rand = { version = "0.8.4", optional = true }

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.4"

[features]
default = ["std", "alloc"]
nightly = [] # Enable nightly or experiemental features
doc     = [] # Used when compiling docs
std     = ["rand/std"] # Enable stdlib support
alloc   = ["rand/alloc"] # Enable heap allocations

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
